# collective-ai

./: README.md  package.json  pyproject.toml
collective_ai/: __init__.py  core.py
collective_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py  test_core_coverage.py  test_core_extended.py
