[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collective-ai"
version = "0.1.0"
description = "Simulation-first collective inference: predict, observe, gap, learn"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "SuperInstance"}]
keywords = ["collective", "inference", "simulation", "prediction", "gap-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["collective_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
